# finance_tracker_agent

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
finance_tracker_agent/: __init__.py
finance_tracker_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
finance_tracker_agent/agents/: budget_agent.py  expense_agent.py  insights_agent.py  manager_agent.py  onboarding_agent.py
finance_tracker_agent/config/: settings.py
finance_tracker_agent/tools/: excel_tools.py  telegram_tools.py
finance_tracker_agent/workflows/: finance_workflow.py
